@@ -99,10 +99,10 @@ Improvements:
    * Naviframe works for H/W Back key event.
    * Naviframe is now supproting focus_direction.
    * Scroller decides whether the accelerator is on or not, depending on the velocity and the interval time of the flick event.
-   * Ctxpopup is now supproting focus_direction.
+	* Ctxpopup is now supproting focus_direction.
    * Don't try to pop the naviframe item multiple times.
-
-Fixes:
+   * Support language change for widget items (Ctxpopup, Hoversel, Naviframe, Diskselector, List, Menu, Segment_Control, Toolbar, Popup, MultibuttonEntry)																 
+	Fixes:
 
    * Now elm_datetime_field_limit_set() can set year limits wihtout problems.
    * Fix re-order animation when it doesn't end correctly.
